# OnlyAir

./: .gitignore  CMakeLists.txt  LICENSE  README.md  index.html
installer/: OnlyAirSetup.iss
resources/: OnlyAir.rc  resources.qrc
scripts/: build.bat  convert_icon.ps1  setup_dependencies.ps1
src/app/: Application.cpp  Application.h  AudioPlayer.cpp  AudioPlayer.h  SceneManager.cpp  SceneManager.h  Translator.cpp  Translator.h  VideoPlayer.cpp  VideoPlayer.h  main.cpp
src/app/qt/: MainWindow.cpp  MainWindow.h  PlaybackControls.cpp  PlaybackControls.h  ScenePanel.cpp  ScenePanel.h  VideoPreviewWidget.cpp  VideoPreviewWidget.h
src/shared/: FrameBuffer.cpp  FrameBuffer.h  SharedMemory.cpp  SharedMemory.h
